--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  <img src="https://i.postimg.cc/nrCTC4HR/1-1.jpg" alt="online.jpg" style="max-width: 100%; height: auto;">
 </div>
 
-<p>Visit here for  <a href="https://kitabnagrionline.onrender.com/"> Unique Elements and Themes in Farwa Khalid's Urdu Novels </a></p>
+<p>Visit here for  <a href="https://online-tajweed.gitbook.io/online-tajweed/"> Learn Tajweed Rules for Quran Recitation Online </a></p>
     
 <h2>Why Choose Online Quran Classes for Beginners?</h2>
 <h2>Convenience and Flexibility</h2>
